--- a/src/theme/global-browse.scss
+++ b/src/theme/global-browse.scss
@@ -29,6 +29,7 @@ ion-content[role="browse"] {
     ion-item.in-list, ion-item-group ion-item {
         background-color: $fluster-light-grey;
         --background: #{$fluster-light-grey};
+        --background-activated: #{$fluster-light-grey};
     }
 
     ion-searchbar input.searchbar-input {
