refactor: cleaner way to stop the slides to auto play per default

--- a/src/app/modals/core/yelp-business-details/yelp-business-details.html
+++ b/src/app/modals/core/yelp-business-details/yelp-business-details.html
@@ -16,7 +16,7 @@
         <ion-spinner ion-text color="primary"></ion-spinner>
     </div>
 
-    <ion-slides #yelpSlider pager="true" *ngIf="yelpImages != null" (ionSlidesDidLoad)="stopSlideAutoplay()">
+    <ion-slides #yelpSlider pager="true" *ngIf="yelpImages != null" [options]="slideOptsProgressbar">
         <ion-slide *ngFor="let yelpImgUrl of yelpImages;">
             <app-image-loader [src]="yelpImgUrl"></app-image-loader>
         </ion-slide>
