--- a/src/app/pages/core/first-choice/first-choice.page.html
+++ b/src/app/pages/core/first-choice/first-choice.page.html
@@ -13,7 +13,7 @@
 
 <ion-content [attr.role]="isAdSelected ? 'ad' : ''" [scrollY]="false" padding>
 
-  <ion-slides #firstChoiceSlider pager="false" [options]="slideOptsOnlyExternal" (ionSlidesDidLoad)="stopSlideAutoplay()">
+  <ion-slides #firstChoiceSlider pager="false" [options]="slideOptsOnlyExternal">
 
     <ion-slide>
       <div class="flex-content big-screen-content">
