--- a/src/app/pages/core/login/login.page.html
+++ b/src/app/pages/core/login/login.page.html
@@ -11,7 +11,7 @@
   </div>
   <!--endRemoveIf(production)-->
 
-  <ion-slides #loginSlider pager="true" [options]="slideOptsProgressbar" (ionSlidesDidLoad)="stopSlideAutoplay()">
+  <ion-slides #loginSlider pager="true" [options]="slideOptsProgressbar">
     <ion-slide>
       <div class="slide-text" padding>
         <p [innerHTML]="'LOGIN.SLIDES.SLIDE1' | translate"></p>
