feat(#1): don't apply the parallax effect on Android

--- a/src/theme/toolbar.scss
+++ b/src/theme/toolbar.scss
@@ -35,6 +35,10 @@ ion-content[role="browse"], ion-content[role="ad"] {
 
         }
     }
+
+    ion-toolbar {
+        z-index: 1;
+    }
 }
 
 ion-content[role="browse"] {
