feat(#25): improve gui for small device

--- a/src/app/pages/advertise/admin/admin-limitation/admin-limitation.page.scss
+++ b/src/app/pages/advertise/admin/admin-limitation/admin-limitation.page.scss
@@ -1,4 +1,5 @@
 @import "../../../../../theme/fluster-variables";
+@import "../../../../components/advertise/new-ad/new-ad.component";
 
 #selectGender {
   ion-item {
