--- a/src/app/components/advertise/new-ad/new-ad-step-done/new-ad-step-done.html
+++ b/src/app/components/advertise/new-ad/new-ad-step-done/new-ad-step-done.html
@@ -29,7 +29,7 @@
 
         <ion-row class="flex-end">
             <ion-col size="12" no-padding>
-                <div class="padding-top-very-small new-ad-buttons-flex">
+                <div class="padding-top-very-small sticky-buttons-flex">
                     <div *ngIf="hasReward()" text-center id="rewardlegal" padding-top>
                         <a (click)="openTermsOfConditions()">{{'NEW_AD.STEP_DONE.REWARD_LEGAL' | translate}}</a>
                     </div>
