--- a/src/app/components/advertise/new-ad/new-ad-step-limitation/new-ad-step-limitation.scss
+++ b/src/app/components/advertise/new-ad/new-ad-step-limitation/new-ad-step-limitation.scss
@@ -1,5 +1,5 @@
 @import "../../../../../theme/fluster-variables";
-@import "../new-ad.component";
+@import "../../../../../theme/container";
 
 #selectGender {
     ion-item {
