--- a/src/app/components/advertise/new-ad/new-ad-step-location/new-ad-step-location.html
+++ b/src/app/components/advertise/new-ad/new-ad-step-location/new-ad-step-location.html
@@ -34,7 +34,7 @@
                                 [msgLocation]="true">
                 </app-targeted-users>
 
-                <ion-button expand="full" shape="round" class="new-ad-buttons-flex" (click)="next()">
+                <ion-button expand="full" shape="round" class="sticky-buttons-flex" (click)="next()">
                     {{'CORE.NEXT' | translate}}
                     <ion-icon slot="end" name="arrow-forward"></ion-icon>
                 </ion-button>
