--- a/src/app/components/advertise/new-ad/new-ad-step-photo/new-ad-step-photo.scss
+++ b/src/app/components/advertise/new-ad/new-ad-step-photo/new-ad-step-photo.scss
@@ -1,7 +1,7 @@
 @import "../../../../../theme/fluster-variables";
 @import "../../../../../theme/media-queries";
 @import "../../../../../theme/mixins";
-@import "../new-ad.component";
+@import "../../../../../theme/container";
 
 #main-photo {
     position: relative;
