--- a/src/app/components/advertise/new-ad/new-ad-step-limitation/new-ad-step-limitation.html
+++ b/src/app/components/advertise/new-ad/new-ad-step-limitation/new-ad-step-limitation.html
@@ -1,5 +1,5 @@
-<div padding-start padding-end class="new-ad-container big-screen-content">
-    <div class="new-ad-content" (swipe)="swipeSlide($event)">
+<div padding-start padding-end class="sticky-container big-screen-content">
+    <div class="sticky-content" (swipe)="swipeSlide($event)">
         <h1 text-center class="padding-top-big">{{'NEW_AD.STEP_LIMITATION.TITLE' | translate}}</h1>
 
         <h2 text-center *ngIf="isItemShare()">{{'NEW_AD.STEP_LIMITATION.SUB_TITLE_SHARE' | translate}}</h2>
@@ -42,13 +42,13 @@
         </ion-grid>
     </div>
 
-    <div class="new-ad-buttons" (swipe)="swipeSlide($event)">
+    <div class="sticky-buttons" (swipe)="swipeSlide($event)">
 
         <app-targeted-users #targetedUsersLimitation [item]="newItem"
                         [msgLocation]="false">
         </app-targeted-users>
 
-        <ion-button expand="full" shape="round" class="new-ad-buttons-flex" (click)="next()" [disabled]="!isNextAllowed()">
+        <ion-button expand="full" shape="round" class="sticky-buttons-flex" (click)="next()" [disabled]="!isNextAllowed()">
             <span *ngIf="!isEdit() || isActivation()">{{'NEW_AD.STEP_USER.PUBLISH' | translate}}</span>
             <span *ngIf="isEdit() && !isActivation()">{{'NEW_AD.STEP_USER.EDIT' | translate}}</span>
         </ion-button>
