feat(#25): update title of the page to make the goal more obvious

--- a/src/app/pages/advertise/admin/admin-limitation/admin-limitation.page.html
+++ b/src/app/pages/advertise/admin/admin-limitation/admin-limitation.page.html
@@ -19,7 +19,7 @@
 
     <div class="sticky-container big-screen-content" *ngIf="loaded">
         <div class="sticky-content" padding>
-            <h1 text-center class="padding-top-big">{{'NEW_AD.STEP_LIMITATION.TITLE' | translate}}</h1>
+            <h1 text-center padding>{{'ADS.ACTIONS.LIMIT_ADS' | translate}}</h1>
 
             <h2 text-center *ngIf="isItemShare()">{{'NEW_AD.STEP_LIMITATION.SUB_TITLE_SHARE' | translate}}</h2>
 
