feat(#25): add link to step limitation once ad published

--- a/src/app/pages/advertise/new-ad/new-ad.page.html
+++ b/src/app/pages/advertise/new-ad/new-ad.page.html
@@ -65,7 +65,7 @@
     </ion-slide>
 
     <ion-slide *ngIf="loadSlideDone">
-      <app-new-ad-step-done [slider]="slider" (notifiyGoToAdDetailCall)="navigateToAdDetail()" (notifiyGoToAdminAppointments)="navigateToAdminAppointments()" (notifyPrev)="backToPreviousSlide()"></app-new-ad-step-done>
+      <app-new-ad-step-done [slider]="slider" (notifiyGoToAdDetailCall)="navigateToAdDetail()" (notifiyGoToAdminAppointments)="navigateToAdminAppointments()" (notifiyGoToAdminLimitation)="navigateToAdminLimitation()" (notifyPrev)="backToPreviousSlide()"></app-new-ad-step-done>
     </ion-slide>
 
   </ion-slides>
