--- a/src/app/pages/advertise/new-ad/new-ad.page.html
+++ b/src/app/pages/advertise/new-ad/new-ad.page.html
@@ -49,19 +49,15 @@
     </ion-slide>
 
     <ion-slide *ngIf="loadSlideAttributes">
-      <app-new-ad-step-attributes [slider]="slider" (notifyNext)="loadNextSlideLimitation()" (notifyPrev)="backToPreviousSlide()"></app-new-ad-step-attributes>
+      <app-new-ad-step-attributes [slider]="slider" (notifyNext)="loadNextSlideDone()" (notifyPrev)="backToPreviousSlide()"></app-new-ad-step-attributes>
     </ion-slide>
 
     <ion-slide *ngIf="loadSlideLifestyle">
-      <app-new-ad-step-lifestyle [slider]="slider" (notifyNext)="loadNextSlideDone()" (notifyPrev)="backToPreviousSlide()"></app-new-ad-step-lifestyle>
+      <app-new-ad-step-lifestyle [slider]="slider" (notifyNext)="publish()" (notifyPrev)="backToPreviousSlide()"></app-new-ad-step-lifestyle>
     </ion-slide>
 
     <ion-slide *ngIf="loadSlideAttendance">
-      <app-new-ad-step-attendance [slider]="slider" (notifyNext)="loadNextSlideDone()"></app-new-ad-step-attendance>
-    </ion-slide>
-
-    <ion-slide *ngIf="loadSlideLimitation">
-      <app-new-ad-step-limitation [slider]="slider" (notifiyPublishCall)="publish()" (notifyPrev)="backToPreviousSlide()"></app-new-ad-step-limitation>
+      <app-new-ad-step-attendance [slider]="slider" (notifyNext)="publish()"></app-new-ad-step-attendance>
     </ion-slide>
 
     <ion-slide *ngIf="loadSlideDone">
