ux: add an icon to the publish button

--- a/src/app/components/advertise/new-ad/new-ad-step-lifestyle/new-ad-step-lifestyle.html
+++ b/src/app/components/advertise/new-ad/new-ad-step-lifestyle/new-ad-step-lifestyle.html
@@ -16,6 +16,7 @@
         <ion-button expand="full" shape="round" class="sticky-buttons-flex" (click)="next()">
             <span *ngIf="!isEdit() || isActivation()">{{'NEW_AD.STEP_USER.PUBLISH' | translate}}</span>
             <span *ngIf="isEdit() && !isActivation()">{{'NEW_AD.STEP_USER.EDIT' | translate}}</span>
+            <ion-icon slot="end" name="send"></ion-icon>
         </ion-button>
     </div>
 </div>
