--- a/src/app/pages/advertise/admin/admin-limitation/admin-limitation.page.html
+++ b/src/app/pages/advertise/admin/admin-limitation/admin-limitation.page.html
@@ -1,14 +1,9 @@
 <ion-header>
     <ion-toolbar>
         <ion-buttons slot="start">
-            <ion-menu-toggle *ngIf="menuToggle">
-                <ion-button>
-                    <ion-icon slot="icon-only" name="menu"></ion-icon>
-                </ion-button>
-            </ion-menu-toggle>
-
-            <ion-back-button *ngIf="!menuToggle"></ion-back-button>
-
+            <ion-button (click)="customBack()" class="custom-back-button">
+                <ion-icon name="arrow-back"></ion-icon>
+            </ion-button>
         </ion-buttons>
 
         <ion-title>FLUSTER</ion-title>
