feat(#27): add action sheet and link admin-limitation with candidates page

--- a/src/app/pages/advertise/ads/candidates/candidates.page.html
+++ b/src/app/pages/advertise/ads/candidates/candidates.page.html
@@ -10,6 +10,12 @@
     </ion-buttons>
 
     <ion-title>{{'MENU.AD.CANDIDATES' | translate}}</ion-title>
+
+    <ion-buttons slot="end" *ngIf="loaded">
+      <ion-button (click)="presentActionSheet($event)">
+        <ion-icon slot="icon-only" name="more"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
