feat: fix page like other calendar page

--- a/src/app/pages/advertise/admin/admin-appointments/admin-appointments.page.html
+++ b/src/app/pages/advertise/admin/admin-appointments/admin-appointments.page.html
@@ -10,7 +10,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content role="ad" [forceOverscroll]="true">
+<ion-content role="ad" [scrollY]="false">
 
   <div ion-fixed *ngIf="loaded">
 
