feat(#28): workaround to handle current hardware back button with slider navigation

--- a/src/app/pages/advertise/ads/ads-details/ads-details.page.html
+++ b/src/app/pages/advertise/ads/ads-details/ads-details.page.html
@@ -33,7 +33,7 @@
     <ion-spinner ion-text color="primary"></ion-spinner>
   </div>
 
-  <app-no-ads *ngIf="!hasItem() && loaded" (notifyNavigateNewItem)="navigateNewItem()"></app-no-ads>
+  <app-no-ads *ngIf="!hasItem() && loaded" (notifyNavigateNewItem)="navigateNewItem('/ads-details')"></app-no-ads>
 </ion-content>
 
 <ion-footer role="ad">
