feat(#33): add targeted users to admin limitation

--- a/src/app/components/advertise/new-ad/targeted-users/targeted-users.scss
+++ b/src/app/components/advertise/new-ad/targeted-users/targeted-users.scss
@@ -7,6 +7,10 @@
 .targetedUsers * {
     font-size: $fluster-text-normal;
     font-weight: $font-weight-light;
+
+    &.targetedUsersCount {
+        font-weight: $font-weight-normal;
+    }
 }
 
 .targetedUsers ion-icon {
