refactor(#33): move component

--- a/src/app/components/advertise/targeted-users/targeted-users.scss
+++ b/src/app/components/advertise/targeted-users/targeted-users.scss
@@ -1,4 +1,4 @@
-@import "../../../../../theme/fluster-variables";
+@import "../../../../theme/fluster-variables";
 
 .targetedUsers {
     padding-bottom: 8px;
