--- a/src/theme/navbar.scss
+++ b/src/theme/navbar.scss
@@ -1,4 +1,4 @@
-ion-header ion-toolbar {
+ion-header ion-toolbar, ion-header ion-toolbar.sc-ion-toolbar-md-h {
 
   @include fluster-linear-gradient-variable(to right, $fluster-peach1, $fluster-peach3);
   --ion-toolbar-text-color: white;
