--- a/src/theme/buttons.scss
+++ b/src/theme/buttons.scss
@@ -60,8 +60,8 @@ ion-content[role="browse"] {
 // Fab buttons
 
 ion-fab-button.button-review {
-  height: 8vh;
-  width: 8vh;
+  --height: 8vh;
+  --width: 8vh;
   --size: 8vh;
 
   ion-icon {
@@ -69,8 +69,8 @@ ion-fab-button.button-review {
   }
 
   &.big {
-    height: 12vh;
-    width: 12vh;
+    --height: 12vh;
+    --width: 12vh;
     --size: 12vh;
 
     ion-icon {
@@ -80,13 +80,13 @@ ion-fab-button.button-review {
 }
 
 ion-fab-button.button-bookmark, ion-fab-button.button-dislike, ion-fab-button.cancel-button, ion-fab-button.button-like, ion-fab-button.button-review-small {
-  height: 6vh;
-  width: 6vh;
+  --height: 6vh;
+  --width: 6vh;
   --size: 6vh;
 
   &.big {
-    height: 10vh;
-    width: 10vh;
+    --height: 10vh;
+    --width: 10vh;
     --size: 10vh;
 
     ion-icon {
@@ -108,8 +108,8 @@ ion-fab-button.button-like {
 }
 
 ion-fab-button.button-fab-small, ion-fab-button.button-interest-small {
-  height: 4vh;
-  width: 4vh;
+  --height: 4vh;
+  --width: 4vh;
   --size: 4vh;
 
   ion-icon {
@@ -123,38 +123,35 @@ ion-fab-button.button-bookmark, ion-fab-button.button-dislike, ion-fab-button.ca
 }
 
 ion-fab-button.button-bookmark, ion-fab-button.button-dislike, ion-fab-button.button-review, ion-fab-button.button-review-small, ion-fab-button.button-interest-small {
-  color: $fluster-grey-blue;
+  --color: #{$fluster-grey-blue};
 
-  &.activated {
-    color: white;
-    --background: #{$fluster-grey-blue};
-  }
+  --color-activated: white;
+  --background-activated: #{$fluster-grey-blue};
 }
 
 ion-fab-button.cancel-button {
-  color: $fluster-grey-blue;
+  --color: #{$fluster-grey-blue};
 
-  &.activated {
-    color: white;
-    --background: #{$fluster-grey-blue};
-  }
+  --color-activated: white;
+  --background-activated: #{$fluster-grey-blue};
 }
 
 ion-fab-button.button-like, ion-fab-button.button-fab-small {
-  color: $fluster-peach3;
+  --color: #{$fluster-peach3};
 
-  &.activated {
-    color: white;
-    @include fluster-linear-gradient-variable(to right, $fluster-peach1, $fluster-peach3);
-  }
+  --color-activated: white;
+  @include fluster-linear-gradient-variable-activated(to bottom right, $fluster-peach1, $fluster-peach3);
 }
+
 
 ion-fab-button.disabled-button {
   --background: #{$fluster-medium-grey};
-  color: white;
+  --color: white;
 }
 
 ion-fab-button.enabled-button, ion-fab-button.enabled-button.activated {
   @include fluster-linear-gradient-variable(to right, $fluster-peach1, $fluster-peach3);
-  color: white;
+  --color: white;
+
+  @include fluster-linear-gradient-variable-activated(to bottom right, $fluster-peach1, $fluster-peach3);
 }
