feat(#43): handle browser refresh

--- a/src/app/pages/core/first-choice/first-choice.page.html
+++ b/src/app/pages/core/first-choice/first-choice.page.html
@@ -22,7 +22,7 @@
             <ion-col size="12">
               <h1 text-center padding-top>{{'FIRST_CHOICE.LETS_GO' | translate}}</h1>
 
-              <h2 text-center padding-top *ngIf="user">{{'FIRST_CHOICE.WHAT_DO_YOU_WANT_TO_DO' | translate}}</h2>
+              <h2 text-center padding-top>{{'FIRST_CHOICE.WHAT_DO_YOU_WANT_TO_DO' | translate}}</h2>
             </ion-col>
           </ion-row>
 
@@ -58,7 +58,7 @@
             <ion-col size="12">
               <h1 text-center padding-top>{{'FIRST_CHOICE.GENDER.YOU_ARE' | translate}}</h1>
 
-              <h2 text-center padding-top *ngIf="user">{{'FIRST_CHOICE.GENDER.WHY_GENDER' | translate}}</h2>
+              <h2 text-center padding-top>{{'FIRST_CHOICE.GENDER.WHY_GENDER' | translate}}</h2>
             </ion-col>
           </ion-row>
 
